<resources>
    <string name="app_name">Demo App</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_to">Welcome to</string>
    <string name="sing_in">Sign In</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="profile">Profile</string>
    <string name="address">Address</string>
    <string name="store_timing">Store Timing</string>
    <string name="settings">Settings</string>
    <string name="screen_timeout">Screen timeout</string>
    <string name="share_app">Share app</string>
    <string name="logout">Logout</string>
    <string name="set_screen_timeout">Set screen timeout</string>
    <string name="save">save</string>
</resources>