<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:padding="@dimen/space_l"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvTitle"
        android:text="@string/set_screen_timeout"
        android:textColor="@color/textPrimary"
        android:gravity="center_horizontal"
        android:layout_margin="@dimen/space_l"
        android:textSize="@dimen/text_h"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/timer"
        android:layout_marginTop="@dimen/space_l"
        android:textColor="@color/textPrimary"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_marginTop="@dimen/space_xl"
        android:layout_marginBottom="@dimen/size_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save"
        android:text="@string/save"
        android:layout_marginTop="@dimen/space_l"
        android:textColor="@color/white"
        android:background="@drawable/button_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>