<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_lite"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="@dimen/space_l"
        android:layout_width="@dimen/login_width"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="@dimen/space_m"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgLogo"
                android:src="@drawable/logo"
                android:layout_width="@dimen/size_logo"
                android:layout_height="@dimen/size_logo"/>

            <TextView
                android:id="@+id/tvWelcome"
                android:gravity="center_horizontal"
                android:text="@string/welcome_to"
                android:textSize="@dimen/text_n"
                android:textColor="@color/textPrimary"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvAppName"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textSize="@dimen/text_l"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sing_in"
                android:layout_marginTop="@dimen/space_l"
                style="@style/TextAppearance.AppCompat.Title"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textPhone"
                android:layout_marginTop="@dimen/size_s"
                android:layout_marginHorizontal="@dimen/space_l"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_number"
                app:startIconDrawable="@drawable/ic_phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhone"
                    android:maxLength="10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textPassword"
                android:layout_marginHorizontal="@dimen/space_l"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_m"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/ic_key">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvError"
                android:textColor="@color/red"
                android:layout_marginVertical="@dimen/space_l"
                android:layout_marginHorizontal="@dimen/space_l"
                android:gravity="center_horizontal"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_n"
                android:layout_gravity="center"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSingIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_primary"
                android:layout_marginHorizontal="@dimen/space_l"
                android:text="@string/sing_in"
                android:textStyle="bold"
                android:textSize="@dimen/text_n"
                android:textAllCaps="false"
                android:layout_marginVertical="@dimen/space_l"/>

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_marginHorizontal="@dimen/space_l"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>