<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_2"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:paddingHorizontal="@dimen/space_l"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_ml">

        <ImageView
            android:id="@+id/back"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="@dimen/space_m"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="@dimen/size_m"
            android:layout_height="@dimen/size_m"
            app:tint="@color/white" />

        <TextView
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="@dimen/text_h2"
            app:layout_constraintStart_toEndOf="@id/back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/space_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        app:layout_constraintTop_toBottomOf="@id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                app:cardCornerRadius="@dimen/space_l"
                android:layout_margin="@dimen/space_l"
                app:layout_constraintTop_toBottomOf="@id/topBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:padding="@dimen/space_l"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:src="@drawable/logo"
                        android:layout_width="@dimen/logo_size"
                        android:layout_height="@dimen/logo_size"/>

                    <TextView
                        android:id="@+id/name"
                        android:text="@string/app_name"
                        android:textColor="@color/textPrimary"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_h4"
                        android:layout_marginStart="@dimen/size_s"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@id/profile"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/address"
                        android:text="@string/address"
                        android:textSize="@dimen/text_h"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/name"
                        app:layout_constraintStart_toEndOf="@id/profile"
                        android:layout_marginStart="@dimen/size_s"
                        android:layout_marginTop="@dimen/space_m"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        android:id="@+id/phone"
                        android:src="@drawable/phone"
                        app:layout_constraintTop_toBottomOf="@id/address"
                        app:layout_constraintStart_toEndOf="@id/email"
                        android:layout_marginTop="@dimen/size_s"
                        android:layout_marginStart="@dimen/space_l"
                        android:layout_width="@dimen/size_nl"
                        android:layout_height="@dimen/size_n"/>

                    <ImageView
                        android:id="@+id/email"
                        android:src="@drawable/email"
                        android:layout_marginEnd="@dimen/space_m"
                        app:layout_constraintTop_toBottomOf="@id/address"
                        app:layout_constraintStart_toEndOf="@id/profile"
                        android:layout_margin="@dimen/size_s"
                        android:layout_width="@dimen/size_nl"
                        android:layout_height="@dimen/size_n"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/timing"
                android:textSize="@dimen/text_l"
                android:textColor="@color/textPrimary"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/space_l"
                android:layout_marginTop="@dimen/space_l"
                android:text="@string/store_timing"
                app:layout_constraintTop_toBottomOf="@id/card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list"
                android:layout_margin="@dimen/space_m"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                app:layout_constraintTop_toBottomOf="@id/timing"
                tools:itemCount="7"
                tools:listitem="@layout/item_timing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>